--- a/weather-app/src/components/style/favorites.style.scss
+++ b/weather-app/src/components/style/favorites.style.scss
@@ -20,9 +20,9 @@
   background-color: #f5f5f5;
   border-radius: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  padding: 20px;
   height: 15%;
   width: 100%;
 }
@@ -30,6 +30,7 @@
 .favorite-info {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .favorite-city {
@@ -43,9 +44,47 @@
 
 .favorite-remove {
   cursor: pointer;
-  color: red;
+  border: none;
+  background-color: transparent;
+  margin-left: 75%;
 }
 
 .favorite-remove:hover {
-  font-weight: bold;
+  i {
+    color: rgb(165, 49, 49);
+  }
+}
+
+.no_fav_section {
+  text-align: center;
+  color: rgba(255, 255, 255, 0.638);
+}
+
+@media screen and (max-width: 990px) {
+  .favorites-container {
+    height: 100vh;
+    display: list-item;
+    overflow-y: scroll;
+  }
+  .favorite-item {
+    margin-bottom: 20px;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .favorite-info {
+    margin-left: 15px;
+    justify-content: space-between;
+    width: 100%;
+    flex-direction: row;
+  }
+  .favorite-remove {
+    margin-left: 0%;
+    margin-bottom: 15%;
+    i {
+      font-size: 25px;
+    }
+  }
 }
