--- a/weather-app/src/components/style/weather.style.scss
+++ b/weather-app/src/components/style/weather.style.scss
@@ -1,25 +1,27 @@
 .day-time-background {
   background-image: url("../images/daytime.jpg");
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .night-time-background {
   background-image: url("../images/nighttime.jpeg");
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .weather_container {
   height: 100vh;
 
   .mt-3 {
-    border-radius: 30px;
+    border-radius: 2rem;
     height: 85%;
-    padding: 35px;
+    padding: 2rem;
     text-align: center;
     background: rgba(106, 106, 106, 0.209);
-    box-shadow: -2px 1px 17px -6px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: -2px 1px 17px -6px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -2px 1px 17px -6px rgba(0, 0, 0, 0.75);
+    box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
   }
 
   .top_part {
@@ -32,7 +34,7 @@
     width: 50%;
     color: white;
     text-align: left;
-    padding: 15px;
+    padding: 1.875rem;
     height: 50vh;
 
     .conditions_part {
@@ -46,16 +48,26 @@
         display: flex;
         flex-direction: row;
         width: 80%;
+        margin-top: 5%;
       }
 
       .temparature_text {
-        font-size: 120px;
+        font-size: 4.6875rem;
       }
       .condition_text {
-        font-size: 30px;
+        font-size: 1.25rem;
         margin-top: auto;
         margin-bottom: auto;
         margin-left: 5%;
+      }
+      .condition_icon {
+        height: 80px;
+        margin-top: 10%;
+
+        img {
+          height: 100px;
+          width: 170px;
+        }
       }
     }
 
@@ -74,26 +86,38 @@
     width: 50%;
   }
 
+  .add-to-favorites {
+    border: none;
+    background-color: transparent;
+    i {
+      color: white;
+      font-size: 1.875rem;
+    }
+    .clicked {
+      color: rgb(165, 49, 49);
+    }
+  }
+
   .searchField {
     width: 100%;
     display: flex;
     flex-direction: row;
+    height: 12%;
+    margin-top: 5%;
     input {
-      padding: 10px;
+      padding: 1.25rem;
       margin-left: 20%;
       width: 50%;
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
+      border-top-left-radius: 1rem;
+      border-bottom-left-radius: 1rem;
       background-color: rgba(68, 88, 121, 0.296);
       border: none;
       color: white;
       outline: none;
     }
     button {
-      width: 20%;
-      padding: 10px;
-
-      border-radius: 10px;
+      width: 22%;
+      border-radius: 1rem;
       background: white;
       border: none;
     }
@@ -113,8 +137,8 @@
     }
 
     li {
-      border-bottom: 1px solid #cccccc6b;
-      padding: 10px;
+      border-bottom: 0.5px solid #cccccc6b;
+      padding: 1.25rem;
       background-color: #7470706f;
       list-style: none;
     }
@@ -123,11 +147,11 @@
   .forecast-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
-    border-radius: 25px;
-    box-shadow: -2px 1px 17px -6px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: -2px 1px 17px -6px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -2px 1px 17px -6px rgba(0, 0, 0, 0.75);
+    gap: 1.25rem;
+    border-radius: 25px; /* Equivalent to 25px */
+    box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
     background-color: #5a5a5a46;
   }
 
@@ -138,7 +162,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 20px;
+    padding: 1.25rem;
   }
 
   .forecast-day {
@@ -149,8 +173,141 @@
   }
 
   .forecast-temperature {
-    margin-top: 5px;
-    font-size: 20px;
+    margin-top: 0.3125rem;
+    font-size: 1.25rem;
     font-weight: bold;
+  }
+
+  /* Media query for screens up to 990px and smaller */
+}
+
+@media screen and (max-width: 990px) {
+  .weather_container {
+    height: 90vh;
+
+    .autocomplete_list {
+      position: absolute;
+      z-index: 1;
+      width: 50vw;
+      margin-left: 10%;
+      color: white;
+      li {
+        border-bottom: 0.5px solid #cccccc6b;
+        padding: 1.25rem;
+        background-color: #747070;
+        list-style: none;
+      }
+    }
+
+    .mt-3 {
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem;
+      height: 90vh;
+      padding: 0rem;
+      text-align: center;
+      background: rgba(106, 106, 106, 0.209);
+      box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
+      -webkit-box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: -0.125rem 0.0625rem 1.0625rem -0.375rem rgba(0, 0, 0, 0.75);
+    }
+
+    .top_part {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    .city_info {
+      width: 100%;
+      text-align: center;
+      padding: 1.875rem;
+
+      h1 {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .conditions_part {
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 1.875rem;
+
+        .temp_text {
+          margin-top: 0.625rem;
+          display: flex;
+          flex-direction: column;
+          margin-left: auto;
+          margin-right: auto;
+        }
+
+        .temparature_text {
+          font-size: 2.5rem;
+          text-align: center;
+        }
+
+        .condition_text {
+          font-size: 1.25rem;
+          text-align: center;
+        }
+        .condition_icon {
+          margin-left: auto;
+          margin-right: auto;
+          height: 10px;
+          img {
+            height: 70px;
+            width: 120px;
+          }
+        }
+      }
+    }
+
+    .search_part {
+      width: 90% !important;
+      height: 5%;
+
+      .searchField {
+        display: flex;
+        flex-direction: row;
+        height: 50px;
+
+        input {
+          margin-left: 20%;
+          width: 50%;
+          border-top-left-radius: 1rem;
+          border-bottom-left-radius: 1rem;
+        }
+
+        button {
+          width: 30%;
+        }
+      }
+    }
+
+    .forecast-container {
+      display: flex;
+      height: 30vh;
+      flex-direction: column;
+      border-radius: 0px;
+      box-shadow: none;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      background-color: #5a5a5a00;
+      overflow-y: scroll;
+      border-top: 1px solid rgba(128, 128, 128, 0.382);
+    }
+
+    .forecast-item {
+      display: flex;
+      color: white;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+    }
+
+    .search_part {
+      .searchField {
+        margin-top: 0.625rem;
+      }
+    }
   }
 }
