--- a/weather-app/src/components/style/favorites.style.scss
+++ b/weather-app/src/components/style/favorites.style.scss
@@ -87,4 +87,10 @@
       font-size: 25px;
     }
   }
+  .title {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 5%;
+  }
 }
